# blindspot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: blindspot-eval.yml  ci.yml
examples/: quick_start.py
leaderboard/: package.json  tailwind.config.ts
leaderboard/src/app/: globals.css  layout.tsx  page.tsx
src/blindspot/: __init__.py  cli.py  dataset.py  judge.py  report.py  runner.py  types.py
tests/: test_dataset.py  test_judge.py
