[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blindspot"
version = "0.1.0"
description = "Stress-test LLM over-refusal on defeated and unjust rules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BlindSpot Contributors" },
]
keywords = ["llm", "evaluation", "safety", "over-refusal", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "litellm>=1.30",
    "instructor>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
blindspot = "blindspot.cli:cli"

[project.urls]
Homepage = "https://github.com/TheoMeff/blindspot"
Repository = "https://github.com/TheoMeff/blindspot"
Issues = "https://github.com/TheoMeff/blindspot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/blindspot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
